<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cornerRadius"
                app:cardElevation="0dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_paragraph"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightCardsImageHome"
                        android:src="@drawable/banner_platzi_conf"
                        android:layout_marginTop="1dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        android:layout_marginRight="@dimen/marginHomeSubtitle"
                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textSize="@dimen/mainFontSize"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        android:layout_marginRight="@dimen/marginHomeSubtitle"
                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cornerRadius"
                app:cardElevation="0dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_paragraph">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightCardsImageHome"
                        android:src="@drawable/platzi_conf_2"
                        android:scaleType="centerCrop"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        android:layout_marginRight="@dimen/marginHomeSubtitle"
                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textSize="@dimen/mainFontSize"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        android:layout_marginRight="@dimen/marginHomeSubtitle"
                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cornerRadius"
                app:cardElevation="0dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_paragraph">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightCardsImageHome"
                        android:src="@drawable/platzi_conf_3"
                        android:scaleType="centerCrop"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        android:layout_marginRight="@dimen/marginHomeSubtitle"
                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textSize="@dimen/mainFontSize"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"
                        android:layout_marginRight="@dimen/marginHomeSubtitle"
                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>